--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         continue-on-error: true
         run: |
           cd opfiles-dev
-          # parallel --use-cpus-instead-of-cores ::: 'python3 -m openfiles' 'sudo bash cleanup.sh'
+          # parallel --use-cpus-instead-of-cores ::: 'python3 -m openfiles' 'sudo bash cleanit.sh'
           python3 -m openfiles
       - name: Quality Control
         run: |
