--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,7 @@ jobs:
         continue-on-error: true
         run: |
           cd opfiles-dev
-          # parallel --use-cpus-instead-of-cores ::: 'python3 -m openfiles' 'sudo bash cleanit.sh'
-          python3 -m openfiles
+          parallel --use-cpus-instead-of-cores ::: 'python3 -m openfiles' 'sudo bash cleanit.sh'
       - name: Quality Control
         run: |
           git clone https://github.com/${GITHUB_REPOSITORY} lupo
