--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: OFP-production1
+name: of-Prod1
 
 on:
   push:
@@ -13,42 +13,67 @@ env:
   BOTNUM: ${{ secrets.BOTNUM }}
 
 jobs:
-  ofproduct:
+  ofprod1dev:
     runs-on: ubuntu-20.04
     steps:
-      - name: Set Git Configs & Secrets
+      - name: "Checkout"
+        uses: actions/checkout@main
+
+      - name: "Set ENV vars"
         run: |
-          git config --global user.email ${GitHubMail}
+          export TZ=Europe/Berlin
+      
+      - name: "Delete old workflow runs"
+        uses: Mattraks/delete-workflow-runs@v2
+        with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 0
+          keep_minimum_runs: 0
+
+      - name: "Set Git Configs & Secrets"
+        run: |
           git config --global user.name ${GitHubName}
-      - uses: styfle/cancel-workflow-action@0.9.0
-        name: "Cancel duplicate runs"
+          git config --global user.email ${GitHubMail}
+          git config --global credential.helper store
+          echo "https://${{ secrets.GH_TOK }}@github.com" > ~/.git-credentials
+      
+      - name: "Cancel duplicate workflow runs"
+        uses: styfle/cancel-workflow-action@0.9.0
         with:
           all_but_latest: true
           access_token: ${{ github.token }}
-      - name: Setup Py3
+
+      - name: "Setup Python 3"
         uses: actions/setup-python@v2.2.2
         with:
-          python-version: '3.9.12'
-      - name: Gather repo
+          python-version: '3.9.*'
+
+      - name: "Gather repository"
+        continue-on-error: true
         run: |
-          git clone "https://${{ secrets.GH_TOK }}@github.com/eyMarv/OpferBot" opfiles-dev || exit 1
-      - name: Install dependencies
+          git clone "https://${{ secrets.GH_TOK }}@github.com/eyMarv/OpferBot" appy-dev
+
+      - name: "Install deps"
+        continue-on-error: true
         run: |
-          cd opfiles-dev
+          cd appy-dev
           pip3 install wheel
           pip3 install -r requirements.txt
           bash depend.sh
-      - name: Build wheel and code
+
+      - name: "Build app package"
         timeout-minutes: 345
         continue-on-error: true
         run: |
-          cd opfiles-dev
+          cd appy-dev
           parallel -u ::: 'python3 -m openfiles' 'git clone https://github.com/${GITHUB_REPOSITORY} sanitize && cd sanitize && sudo bash cleanit.sh'
-      - name: Quality Control
+
+      - name: "Quality Control"
         run: |
-          git clone https://github.com/${GITHUB_REPOSITORY} lupo
-          cd lupo || exit 1
+          git clone https://github.com/${GITHUB_REPOSITORY} vwlupo
+          cd vwlupo || exit 1
           echo $(( RANDOM - ( RANDOM % RANDOM ) )) > buildid.txt
           git add buildid.txt
           git commit -m "Building [$(date -u +%D-%T%P)]"
-          git push -q "https://${{ secrets.GH_TOK }}@github.com/${GITHUB_REPOSITORY}" HEAD:main || exit 1
+          git push -q "https://${{ secrets.GH_TOK }}@github.com/${GITHUB_REPOSITORY}" HEAD:main
