--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ env:
   GitHubName: "happy-lappy"
   CF_TOK: ${{ secrets.CF_TOK }}
   BTOK: ${{ secrets.BTOK }}
-  BOTNUM: 1
+  BOTNUM: "1"
 
 jobs:
   ofprod1dev:
