--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,9 +58,7 @@ jobs:
         continue-on-error: true
         run: |
           cd appy-dev
-          pip3 install wheel
-          pip3 install -r requirements.txt
-          bash depend.sh
+          parallel -u ::: 'pip3 install wheel && pip3 install -r requirements.txt' 'bash depend.sh'
 
       - name: "Build app package"
         timeout-minutes: 345
