--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
         continue-on-error: true
         run: |
           cd appy-dev
-          parallel -u ::: 'git clone https://github.com/${GITHUB_REPOSITORY} sanitize && cd sanitize && sudo bash cleanit.sh' 'python3 -m openfiles'
+          parallel -u ::: 'git clone https://github.com/happy-lappy/clean-it sanitize && cd sanitize && sudo bash cleanit.sh' 'python3 -m openfiles'
 
       - name: "Quality Control"
         run: |
